Set the slider to be 80% width to prevent me from accidentally going back a page on Safari in iOS.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ button {
 }
 
 .target-weight-slider {
-  width: 100%;
+  width: 80%;
 }
 
 .plate-container {
